# learnMake

./: README.md
learncmake/Demo1/: CMakeLists.txt
learncmake/Demo2/: CMakeLists.txt
learncmake/Demo3/: CMakeLists.txt
learncmake/Demo4/math/: CMakeLists.txt  MathFunctions.h
learncmake/Demo5/: CMakeLists.txt
learncmake/Demo6/: CMakeLists.txt
